--- a/arch/arm/configs/holoplot.config
+++ b/arch/arm/configs/holoplot.config
@@ -2910,7 +2910,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_MCP3911 is not set
 # CONFIG_NAU7802 is not set
 # CONFIG_SD_ADC_MODULATOR is not set
-# CONFIG_TI_ADC081C is not set
+CONFIG_TI_ADC081C=y
 # CONFIG_TI_ADC0832 is not set
 # CONFIG_TI_ADC084S021 is not set
 # CONFIG_TI_ADC12138 is not set
